test/error/test-01.ifj21
-- 1 (lexical error)
require "ifj21"

function main()
    local n: number = 2.2end
end
